--- a/web/templates/index.html.eex
+++ b/web/templates/index.html.eex
@@ -12,7 +12,14 @@
 		<div id="header">
 			<h1>Try <img id="logo" src="/static/img/elixir.png"></h1>
 		</div>
-		<div id="editor">1 + 1</div>
+		<div id="editor">defmodule HelloWorld do
+  def say_hello do
+    "Hello World!"
+  end
+end
+
+HelloWorld.say_hello
+</div>
 		<button id="run-button">Run</button>
 	</div>
 	<textarea readonly id="output">Output will be put here</textarea>
