--- a/web/templates/index.html.eex
+++ b/web/templates/index.html.eex
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>ACE in Action</title>
+	<title>Try Elixir</title>
 	<link href="/static/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/static/css/custom.css" rel="stylesheet">
 	<script src="/static/js/bootstrap.min.js"></script>
