Toggle line wrapping

--- a/web/templates/index.html.eex
+++ b/web/templates/index.html.eex
@@ -29,6 +29,7 @@ HelloWorld.say_hello
 		editor.setTheme("ace/theme/monokai");
 		editor.getSession().setMode("ace/mode/elixir");
 		editor.setAutoScrollEditorIntoView(true);
+		editor.getSession().setUseWrapMode(true);
 
 		$("#run-button").click(function() {
 			$.ajax({
